<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.RogueBasic</groupId>
	<artifactId>RogueBasic</artifactId>
	<version>0.9.3-SNAPSHOT</version>
	<name>RogueBasic</name>
	<description>Portfolio project</description>
	<properties>
		<java.version>11</java.version>
		<frontend-src-dir>${project.basedir}/src/main/app</frontend-src-dir>
		<node.version>v14.17.5</node.version>
		<yarn.version>v1.22.11</yarn.version>
		<frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
	</properties>
	<dependencies>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-cassandra -->
		<dependency>
		    <groupId>org.springframework.data</groupId>
		    <artifactId>spring-data-cassandra</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-databind</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
			    <groupId>com.github.eirslett</groupId>
			    <artifactId>frontend-maven-plugin</artifactId>
			    <version>${frontend-maven-plugin.version}</version>
			
			    <configuration>
			        <nodeVersion>${node.version}</nodeVersion>
			        <yarnVersion>${yarn.version}</yarnVersion>
			        <workingDirectory>${frontend-src-dir}</workingDirectory>
			        <installDirectory>${project.build.directory}</installDirectory>
			    </configuration>
			
			    <executions>
			        <execution>
			            <id>install-frontend-tools</id>
			            <goals>
			                <goal>install-node-and-yarn</goal>
			            </goals>
			        </execution>
			
			        <execution>
			            <id>yarn-install</id>
			            <goals>
			                <goal>yarn</goal>
			            </goals>
			            <configuration>
			                <arguments>install</arguments>
			            </configuration>
			        </execution>
			
			        <execution>
			            <id>build-frontend</id>
			            <goals>
			                <goal>yarn</goal>
			            </goals>
			            <phase>prepare-package</phase>
			            <configuration>
			                <arguments>build</arguments>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
			    <artifactId>maven-resources-plugin</artifactId>
			    <executions>
			        <execution>
			            <id>position-react-build</id>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <phase>prepare-package</phase>
			            <configuration>
			                <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
			                <resources>
			                    <resource>
			                        <directory>${frontend-src-dir}/build</directory>
			                        <filtering>false</filtering>
			                    </resource>
			                </resources>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
	</build>

</project>
